@@ -2,23 +2,9 @@
 #include "NewWave/Exceptions.hh"
 #include "NewWave/Utils.hh"
 
-#include <gsl/gsl_wavelet.h>
-#include <gsl/gsl_wavelet2d.h>
-
 namespace NewWave {
   
-  /**
-   *  horrible inheritance from C library gsl_wavelet struct that is typedefed
-   *  This allows the gsl headers to be absent from GSLEngine.hh
-   *  We do have to cast back from the base class to the derived classes
-   */
-  
-  struct GSLEngine::wavelet : public gsl_wavelet{};
-  struct GSLEngine::wavelet_type : public gsl_wavelet_type{};
-  struct GSLEngine::wavelet_workspace : public gsl_wavelet_workspace{};
-  
-  
-  GSLEngine::GSLEngine(wavelet_type *type, size_t degree,
+  GSLEngine::GSLEngine(const gsl_wavelet_type *type, size_t degree,
                        const PixelDefinition &pixelDefn):
   _waveletType(type), _degree(degree),
   _wavelet(0), _workspace(0){
@@ -88,9 +74,8 @@ namespace NewWave {
     _nSegments2 = nSegments*nSegments;
     if(!isRadix2(_nSegments)) throw PixelDefinitionException("Length of pixel array is not radix 2");
     
-    /// urgh, not nice casting, but no choice with C anaonymous struct typedef in GSL
-    _wavelet = (wavelet*)gsl_wavelet_alloc(_waveletType, _degree);
-    _workspace = (wavelet_workspace*)gsl_wavelet_workspace_alloc(_nSegments*_nSegments);
+    _wavelet = gsl_wavelet_alloc(_waveletType, _degree);
+    _workspace = gsl_wavelet_workspace_alloc(_nSegments*_nSegments);
     
     initPhiLevels();
     initYLevels();
